Kubernet/ConfigMap_securité/dpl_config_sec.yml

#---------------------------BOUCHFIRA CHAYMAE-------------------------#
# Dockerfile:
FROM python:3.8-slim

WORKDIR /app

COPY . .              

RUN pip install flask

CMD ["python", "app.py"]    

---
#deploiment
apiVersion: apps/v1             
kind: Deployment
metadata:
  name: myflask-deployment
  labels:
    app: myflask-deployment
spec:
  replicas: 2        
  selector:            
    matchLabels:
     app: myflask-template
  template:        
    metadata:
      labels:           
        app: myflask-template
    spec:
      containers:
      - name: flask-container
        imagePullPolicy: IfNotPresent
        image: flask1                                           
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
# Service

apiVersion: v1
kind: Service
metadata:
  name: flask-srv
spec:
  type: NodePort      
  selector:          
    app: myflask-template      
  ports:
    - protocol: TCP
      port: 8080              
      targetPort: 80                        
---
# ingress:
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: flask-srv
            port: 
              number: 8080
---
